--- a/First-React/index.html
+++ b/First-React/index.html
@@ -11,7 +11,10 @@
      <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
     </head>
 <body>
-    <div  id="root"></div>
+    <div  id="root">
+         <img src="./react-logo.png" alt="" >
+         
+    </div>
     <script src="./index.js" type="text/babel"></script>
 </body>
 </html>
