--- a/First-React/index.html
+++ b/First-React/index.html
@@ -12,7 +12,7 @@
     </head>
 <body>
     <div  id="root">
-        
+        <img src="" alt="">
     </div>
     <script src="./index.js" type="text/babel"></script>
 </body>
